# PHILODENDRON_JUCE

./: .gitignore  CMakeLists.txt  Philodendron.code-workspace  Philodendron.iss  Philodendron.jucer  README.md
Source/: Outils.cpp  Outils.hpp  Philodendron.cpp  Philodendron.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingBuffer.cpp  RingBuffer.hpp
src/: CMakeLists.txt  Outils.cpp  Outils.hpp  Philodendron.cpp  Philodendron.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RingBuffer.cpp  RingBuffer.hpp
